<resources>
    <string name="app_name">MaterialComponents</string>
    <string name="action_settings">Settings</string>
    <string name="toggle_fab">Toggle Fab Alignment</string>
    <string name="entry_chip">Entry Chip</string>
    <string name="filter_chips">Filter Chip</string>
    <string name="choice_chip">Choice Chip</string>
    <string name="chip_action_default">Chip Action (Default)</string>
    <string name="chip_group">Chip Group</string>
    <string name="first_choice">First Choice</string>
    <string name="second_choice">Second Choice</string>
    <string name="third_choice">Third Choice</string>
    <string name="fourth_choice">Fourth Choice</string>
    <string name="fifth_choice">Fifth Choice</string>
    <string name="button_label_enabled">Enabled</string>
    <string name="button_label_disabled">Disabled</string>
    <string name="unelevated_button_label_enabled">Unelevated</string>
    <string name="text_button_label_enabled">Text Button</string>
    <string name="icon_button_label_enabled">Icon Button</string>
    <string name="bottom_app_bar">Bottom App Bar</string>
    <string name="material_buttons">Material Buttons</string>
    <string name="material_chips">Material Chips</string>
    <string name="text_fields">Text Fields</string>
    <string name="hint_text">Hint Text</string>

    <string-array name="material_components_array">
        <item>Bottom App Bar</item>
        <item>Chips</item>
        <item>Material Buttons</item>
    </string-array>
</resources>
