<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_chip"
        app:chipIcon="@drawable/ic_person_black_24dp" />


    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chip_margin"
        android:text="@string/filter_chips" />

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chip_margin"
        android:text="@string/choice_chip" />

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chip_margin"
        android:text="@string/chip_action_default"
        app:chipIcon="@drawable/ic_account_circle_black_24dp" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chip_margin"
        android:text="@string/chip_group" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chip_margin"
        app:chipSpacing="@dimen/chip_margin"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/first_choice"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/chip_margin"
            android:text="@string/first_choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/second_choice"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/chip_margin"
            android:text="@string/second_choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/third_choice"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/chip_margin"
            android:text="@string/third_choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fourth_choice"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/chip_margin"
            android:text="@string/fourth_choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fifth_choice"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/chip_margin"
            android:text="@string/fifth_choice" />


    </com.google.android.material.chip.ChipGroup>
</LinearLayout>