<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom_app_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_app_bar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/material_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material_buttons" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/material_chips"
        android:text="@string/material_chips" />


</LinearLayout>